tests/ui/parallel-rustc/ice-issue-124423.stderr
error: ambiguous `+` in a type
   |
LL | fn elided(_: &impl Copy + 'a) -> _ { x }
   |               ^^^^^^^^^^^^^^
   |
help: try adding parentheses
   |
LL | fn elided(_: &(impl Copy + 'a)) -> _ { x }
   |               +              +

error: ambiguous `+` in a type
   |
LL | fn explicit<'b>(_: &'a impl Copy + 'a) -> impl 'a { x }
   |                        ^^^^^^^^^^^^^^
   |
help: try adding parentheses
   |
LL | fn explicit<'b>(_: &'a (impl Copy + 'a)) -> impl 'a { x }
   |                        +              +

error: expected identifier, found keyword `impl`
   |
LL | fn elided2( impl 'b) -> impl 'a + 'a { x }
   |             ^^^^ expected identifier, found keyword

error: expected one of `:` or `|`, found `'b`
   |
LL | fn elided2( impl 'b) -> impl 'a + 'a { x }
   |                  ^^ expected one of `:` or `|`

error: ambiguous `+` in a type
   |
LL | fn explicit2<'a>(_: &'a impl Copy + 'a) -> impl Copy + 'a { x }
   |                         ^^^^^^^^^^^^^^
   |
help: try adding parentheses
   |
LL | fn explicit2<'a>(_: &'a (impl Copy + 'a)) -> impl Copy + 'a { x }
   |                         +              +

error: ambiguous `+` in a type
   |
LL | fn foo<'a>(_: &impl Copy + 'a) -> impl 'b + 'a { x }
   |                ^^^^^^^^^^^^^^
   |
help: try adding parentheses
   |
LL | fn foo<'a>(_: &(impl Copy + 'a)) -> impl 'b + 'a { x }
   |                +              +

error: ambiguous `+` in a type
   |
LL | fn elided3(_: &impl Copy + 'a) -> Box<dyn 'a> { Box::new(x) }
   |                ^^^^^^^^^^^^^^
   |
help: try adding parentheses
   |
LL | fn elided3(_: &(impl Copy + 'a)) -> Box<dyn 'a> { Box::new(x) }
   |                +              +

error: ambiguous `+` in a type
   |
LL | fn x<'b>(_: &'a impl Copy + 'a) -> Box<dyn 'b> { Box::u32(x) }
   |                 ^^^^^^^^^^^^^^
   |
help: try adding parentheses
   |
LL | fn x<'b>(_: &'a (impl Copy + 'a)) -> Box<dyn 'b> { Box::u32(x) }
   |                 +              +

error: ambiguous `+` in a type
   |
LL | fn elided4(_: &impl Copy + 'a) ->  new  { x(x) }
   |                ^^^^^^^^^^^^^^
   |
help: try adding parentheses
   |
LL | fn elided4(_: &(impl Copy + 'a)) ->  new  { x(x) }
   |                +              +

error: at least one trait must be specified
   |
LL | fn explicit<'b>(_: &'a impl Copy + 'a) -> impl 'a { x }
   |                                           ^^^^^^^

error: at least one trait must be specified
   |
LL | fn elided2( impl 'b) -> impl 'a + 'a { x }
   |                         ^^^^^^^^^^^^

error: at least one trait must be specified
   |
LL | fn foo<'a>(_: &impl Copy + 'a) -> impl 'b + 'a { x }
   |                                   ^^^^^^^^^^^^

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | fn elided(_: &impl Copy + 'a) -> _ { x }
   |          -                ^^ undeclared lifetime
   |          |
   |          help: consider introducing lifetime `'a` here: `<'a>`

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | fn explicit<'b>(_: &'a impl Copy + 'a) -> impl 'a { x }
   |             -       ^^ undeclared lifetime
   |             |
   |             help: consider introducing lifetime `'a` here: `'a,`

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | fn explicit<'b>(_: &'a impl Copy + 'a) -> impl 'a { x }
   |             -                      ^^ undeclared lifetime
   |             |
   |             help: consider introducing lifetime `'a` here: `'a,`

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | fn explicit<'b>(_: &'a impl Copy + 'a) -> impl 'a { x }
   |             -                                  ^^ undeclared lifetime
   |             |
   |             help: consider introducing lifetime `'a` here: `'a,`

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | fn elided2( impl 'b) -> impl 'a + 'a { x }
   |           -                  ^^ undeclared lifetime
   |           |
   |           help: consider introducing lifetime `'a` here: `<'a>`

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | fn elided2( impl 'b) -> impl 'a + 'a { x }
   |           -                       ^^ undeclared lifetime
   |           |
   |           help: consider introducing lifetime `'a` here: `<'a>`

error[E0261]: use of undeclared lifetime name `'b`
   |
LL | fn foo<'a>(_: &impl Copy + 'a) -> impl 'b + 'a { x }
   |        -                               ^^ undeclared lifetime
   |        |
   |        help: consider introducing lifetime `'b` here: `'b,`

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | fn elided3(_: &impl Copy + 'a) -> Box<dyn 'a> { Box::new(x) }
   |           -                ^^ undeclared lifetime
   |           |
   |           help: consider introducing lifetime `'a` here: `<'a>`

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | fn elided3(_: &impl Copy + 'a) -> Box<dyn 'a> { Box::new(x) }
   |           -                               ^^ undeclared lifetime
   |           |
   |           help: consider introducing lifetime `'a` here: `<'a>`

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | fn x<'b>(_: &'a impl Copy + 'a) -> Box<dyn 'b> { Box::u32(x) }
   |      -       ^^ undeclared lifetime
   |      |
   |      help: consider introducing lifetime `'a` here: `'a,`

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | fn x<'b>(_: &'a impl Copy + 'a) -> Box<dyn 'b> { Box::u32(x) }
   |      -                      ^^ undeclared lifetime
   |      |
   |      help: consider introducing lifetime `'a` here: `'a,`

error[E0261]: use of undeclared lifetime name `'a`
   |
LL | fn elided4(_: &impl Copy + 'a) ->  new  { x(x) }
   |           -                ^^ undeclared lifetime
   |           |
   |           help: consider introducing lifetime `'a` here: `<'a>`

error[E0412]: cannot find type `new` in this scope
   |
LL | fn elided4(_: &impl Copy + 'a) ->  new  { x(x) }
   |                                    ^^^ not found in this scope

error[E0224]: at least one trait is required for an object type
   |
LL | fn x<'b>(_: &'a impl Copy + 'a) -> Box<dyn 'b> { Box::u32(x) }
   |                                        ^^^^^^

error[E0224]: at least one trait is required for an object type
   |
LL | fn elided3(_: &impl Copy + 'a) -> Box<dyn 'a> { Box::new(x) }
   |                                       ^^^^^^

error[E0121]: the placeholder `_` is not allowed within types on item signatures for return types
   |
LL | fn elided(_: &impl Copy + 'a) -> _ { x }
   |                                  ^ not allowed in type signatures

error[E0224]: at least one trait is required for an object type
   |
LL | impl<'a> LifetimeTrait<'a> for &'a Box<dyn 'a> {}
   |                                        ^^^^^^

error[E0599]: no function or associated item named `u32` found for struct `Box<_, _>` in the current scope
   |
LL | fn x<'b>(_: &'a impl Copy + 'a) -> Box<dyn 'b> { Box::u32(x) }
   |                                                       ^^^ function or associated item not found in `Box<_, _>`
   |
note: if you're trying to build a new `Box<_, _>` consider using one of the following associated functions:
      Box::<T>::new
      Box::<T>::new_uninit
      Box::<T>::new_zeroed
      Box::<T>::try_new
      and 22 others
  --> $SRC_DIR/alloc/src/boxed.rs:LL:COL

error: aborting due to 30 previous errors

Some errors have detailed explanations: E0121, E0224, E0261, E0412, E0599.
For more information about an error, try `rustc --explain E0121`.
